--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,77 @@
-
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: 'border-box';
+  display: 'flex';
+  flex-direction: 'column';
+  background-color: '#565E71';
+  padding: 50
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+.header {
+  height: 60px;
+  background-color: #00000096;
 }
+
+.footer {
+  height: 30px;
+  background-color: #00000096;
+}
+
+.main {
+  background-color: #373B44;
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+}
+
+.channels {
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+}
+/*
+channel: {
+  height: '100%',
+  flex: '1 1 auto',
+  display: 'flex',
+  flexDirection: 'column',
+  overflow: 'hidden'
+},
+messages: {
+  flex: '1 1 auto',
+  height: '100%',
+  overflow: 'auto',
+  '& ul': {
+      'margin': 0,
+      'padding': 0,
+      'textIndent': 0,
+      'listStyleType': 0
+  }
+},
+message: {
+  margin: '.2rem',
+  padding: '.2rem',
+  // backgroundColor: '#66728E',
+  ':hover': {
+      backgroundColor: 'rgba(255,255,255,.2)'
+  }
+},
+form: {
+  borderTop: '2px solid #373B44',
+  padding: '.5rem',
+  display: 'flex'
+},
+content: {
+  flex: '1 1 auto',
+  marginRight: '.5rem'
+},
+send: {
+  backgroundColor: '#D6DDEC',
+  padding: '.2rem .5rem',
+  border: 'none',
+  ':hover': {
+      backgroundColor: '#2A4B99',
+      cursor: 'pointer',
+      color: '#fff'
+  }
+}*/
