feat : messages and auth

--- a/src/css/modules/_header.scss
+++ b/src/css/modules/_header.scss
@@ -2,3 +2,9 @@
     margin: space(1);
     background-color: var(--header-background);
 }
+
+.footer {
+    background-color: var(--header-background);
+    margin: space(1);
+    height: 40px;
+}
