feat : delete message

--- a/src/css/modules/_btn.scss
+++ b/src/css/modules/_btn.scss
@@ -119,6 +119,12 @@
     font-size: 0.8em;
   }
   
+  .btn-extrasmall {
+    margin: 0;
+    padding: 1px 3px;
+    font-size: 0.6em;
+  }
+
   .btn-group {
     display: inline-flex;
   
